add apis, swagger documentation
